--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "author": "Julia",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
-    "bootstrap": "^3.3.7",
+    "jquery-circlechart": "^2.0.0",
     "jquery-validation": "^1.16.0"
   },
   "devDependencies": {
