--- a/package.json
+++ b/package.json
@@ -24,15 +24,19 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
     "babel-runtime": "^6.23.0",
+    "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
+    "html-loader": "^0.5.1",
     "node-sass": "^4.5.2",
     "postcss-loader": "^1.3.3",
+    "pug": "^2.0.0-rc.4",
+    "pug-html-loader": "^1.1.5",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
-    "webpack": "^2.4.1"
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "^2.9.3"
   }
 }
