--- a/package.json
+++ b/package.json
@@ -11,13 +11,7 @@
   },
   "author": "Julia",
   "license": "ISC",
-  "dependencies": {
-    "bootstrap": "^3.3.7",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.2.1",
-    "jquery-circlechart": "^2.0.0",
-    "jquery-validation": "^1.16.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^6.7.7",
     "autoprefixer-loader": "^3.2.0",
